09_kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld
  labels:
    app: helloworld
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
      - name: helloworld
        image: helloworld
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: 100Mi
          requests:
            memory: 100Mi
        readinessProbe:
          failureThreshold: 3
          httpGet:
            port: 8080
            path: /
          periodSeconds: 10
          successThreshold: 1
