09_kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld-ingress
  labels:
    app: helloworld
spec:
  rules:
  - host: demo.localhost
    http:
      paths:
      - backend:
          service:
            name: helloworld
            port:
              number: 80
        path: /
        pathType: Prefix
